        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


[[release-notes-unreleased]]
==== Unreleased

[float]
===== Breaking changes
[float]
===== Features
[float]
===== Bug fixes

* fix: It was possible for fetching central config to result in the
  `cloudProvider` config value being reset to its default. {issues}1976[#1976]
* fix: fixes bug where tedious could crash the agent on bulk inserts {pull}1935[#1935] +
  Reported https://discuss.elastic.co/t/apm-agent-crashes-nodejs-after-reporting-exception-in-tedious-instrumentation-code/259851[via the forum].
  The error symptom was: `Cannot read property 'statement' of undefined`

[[release-notes-3.11.0]]
==== 3.11.0 - 2021/02/08

[float]
===== Features

* feat: add `apm.getServiceName()` {pull}1949[#1949] +
  This will be used by https://github.com/elastic/ecs-logging-js[ecs-logging packages]
  to integrate with APM.

* feat: support numeric and boolean labels {pull}1909[#1909] +
  Add an optional `stringify` option to `apm.setLabel(name, version, stringify = true)`
  and `apm.addLabels(labels, stringify = true)`, which can be set `false` to
  allow numeric and boolean labels. Stringify defaults to true for backwards
  compatibility -- stringification will be removed in a future major version.

* feat: added support for cloud metadata fetching {pull}1937[#1937] +
  Agent now collects information about its cloud environment and includes this
  data in the APM Server's metadata payload. See
  https://github.com/elastic/apm/blob/3acd10afa0a9d3510e819229dfce0764133083d3/specs/agents/metadata.md#cloud-provider-metadata[the spec]
  for more information.

[[release-notes-3.10.0]]
==== 3.10.0 - 2021/01/11

[float]
===== Features
